deploy/dev/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agenda-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agenda-app
  template:
    metadata:
      labels:
        app: agenda-app
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000      
        fsGroup: 1000   
      
      containers:
        - name: agenda-app
          image: agendadevacr.azurecr.io/backend:REPLACE_ME
          imagePullPolicy: Always
          
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL   
          
          ports:
            - containerPort: 5000
          
          livenessProbe:
            httpGet:
              path: /health/live
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
