deploy/dev/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agenda-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agenda-app
  template:
    metadata:
      labels:
        app: agenda-app
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      
      containers:
        - name: agenda-app
          image: agendadevacr.azurecr.io/backend:1d028764fb3a0418c45b5497a066c210ce1ef603
          imagePullPolicy: Always
          
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
          
          ports:
            - containerPort: 5000
          
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets"
              readOnly: true
          
          livenessProbe:
            httpGet:
              path: /health/live
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
      
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-postgres-secrets"
